Ajout de la fonctionnalité d'ajout de dépenses mensuelles
- Ajout d'une route pour `AddMonthlyExpensePage` dans `AppShell.xaml.cs`.
- Correction de l'indentation du bouton "Précédent" dans `CalendarComponent.xaml`.
- Mise à jour de `SubTrack.csproj` pour inclure `AddMonthlyExpensePage.xaml`.
- Ajout de la commande `AddExpenseCommand` dans `CalendarPageViewModel.cs` pour gérer l'ajout de dépenses.
- Intégration d'un bouton d'ajout de dépense dans `CalendarPage.xaml`.
- Création de la classe `Expense` dans `Expense.cs` pour représenter une dépense.
- Ajout de `AddMonthlyExpenseViewModel.cs` pour gérer la logique d'ajout de dépenses.
- Création de l'interface utilisateur pour l'ajout de dépenses dans `AddMonthlyExpensePage.xaml`.
- Ajout de la logique de la page d'ajout de dépenses dans `AddMonthlyExpensePage.xaml.cs`.

--- a/SubTrack/SubTrack.csproj
+++ b/SubTrack/SubTrack.csproj
@@ -69,16 +69,15 @@
 	  <MauiXaml Update="Controls\ExpenseItemComponent.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Views\AddMonthlyExpensePage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Views\CalendarPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Views\ProfilePage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
-	</ItemGroup>
-
-	<ItemGroup>
-	  <Folder Include="Models\" />
 	</ItemGroup>
 
 </Project>
