Remplacer les dépenses mensuelles par des opérations financières
Les modifications apportées incluent :
- Changement de la route dans `AppShell.xaml.cs` pour rediriger vers la page d'ajout d'opération financière.
- Mise à jour du contexte de liaison dans `ExpenseItemComponent.xaml.cs` pour utiliser `FinancialOperation`.
- Création de nouvelles tables dans `Database.cs` pour gérer les budgets et revenus mensuels, avec des méthodes adaptées pour `FinancialOperation`.
- Suppression du fichier `Expense.cs` au profit de `FinancialOperation.cs`.
- Ajout d'une nouvelle page `AddFinancialOperationPage.xaml` et de son code-behind pour l'ajout d'opérations financières.
- Création d'un nouveau `ViewModel` dans `AddFinancialOperationViewModel.cs` pour gérer les opérations financières.
- Remplacement des références à `Expense` par `FinancialOperation` dans `CalendarPageViewModel.cs`.
- Suppression de `AddMonthlyExpenseViewModel.cs` et mise à jour des fichiers XAML et code-behind pour refléter ces changements.

--- a/SubTrack/SubTrack.csproj
+++ b/SubTrack/SubTrack.csproj
@@ -65,13 +65,19 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <Compile Update="Views\AddFinancialOperationPage.xaml.cs">
+	    <DependentUpon>AddFinancialOperationPage.xaml</DependentUpon>
+	  </Compile>
+	</ItemGroup>
+
+	<ItemGroup>
 	  <MauiXaml Update="Controls\CalendarComponent.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Controls\ExpenseItemComponent.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
-	  <MauiXaml Update="Views\AddMonthlyExpensePage.xaml">
+	  <MauiXaml Update="Views\AddFinancialOperationPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Views\CalendarPage.xaml">
