--- a/SubTrack/SubTrack.csproj
+++ b/SubTrack/SubTrack.csproj
@@ -65,6 +65,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <Compile Update="Controls\OperationItemComponent.xaml.cs">
+	    <DependentUpon>OperationItemComponent.xaml</DependentUpon>
+	  </Compile>
 	  <Compile Update="Views\AddFinancialOperationPage.xaml.cs">
 	    <DependentUpon>AddFinancialOperationPage.xaml</DependentUpon>
 	  </Compile>
@@ -74,7 +77,7 @@
 	  <MauiXaml Update="Controls\CalendarComponent.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
-	  <MauiXaml Update="Controls\ExpenseItemComponent.xaml">
+	  <MauiXaml Update="Controls\OperationItemComponent.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Views\AddFinancialOperationPage.xaml">
